workload/services/media-server/resources/prowlarr/ingress-prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sd
  name: prowlarr
spec:
  ingressClassName: nginx
  rules:
    - host: prowlarr.lan.speziato.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
  tls:
    - hosts:
        - prowlarr.lan.speziato.dev
      secretName: prowlarr-tls
